--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^8.2.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.0.11",
+    "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
     "lexical": "^0.23.1",
     "mongoose": "^8.9.7",
