--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
     "remixicon": "^4.6.0",
+    "sweetalert2": "^11.26.17",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
