--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
     "@lexical/code": "^0.23.1",
+    "@lexical/history": "^0.39.0",
     "@lexical/link": "^0.23.1",
     "@lexical/list": "^0.23.1",
     "@lexical/markdown": "^0.23.1",
@@ -22,12 +23,14 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.8.1",
     "chart.js": "^4.4.7",
+    "clsx": "^2.1.1",
     "concurrently": "^8.2.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.0.11",
     "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
     "lexical": "^0.23.1",
+    "lucide-react": "^0.562.0",
     "mongoose": "^8.9.7",
     "next": "^15.1.6",
     "primeicons": "^7.0.0",
@@ -41,6 +44,7 @@
     "redux-persist": "^6.0.0",
     "remixicon": "^4.6.0",
     "sweetalert2": "^11.26.17",
+    "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
